--- a/app/src/main/res/layout/fragment_purchase_view.xml
+++ b/app/src/main/res/layout/fragment_purchase_view.xml
@@ -210,7 +210,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/brand"
+                    android:text="@string/quantity_of_logos"
                     android:textColor="@color/light_gray"
                     android:textSize="16sp" />
 
