--- a/app/src/main/res/layout/activity_photography_edit.xml
+++ b/app/src/main/res/layout/activity_photography_edit.xml
@@ -195,7 +195,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/project_type"
+                        android:text="@string/final_deliverables"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
 
@@ -205,7 +205,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/et_white"
-                        android:hint="@string/project_type"
+                        android:hint="@string/final_deliverables"
                         android:importantForAutofill="no"
                         android:inputType="text"
                         android:padding="10dp"
