--- a/app/src/main/res/layout/activity_print_edit.xml
+++ b/app/src/main/res/layout/activity_print_edit.xml
@@ -225,7 +225,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/color_layout"
+                    android:id="@+id/colors_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
